Remove unnecessary Unsafe warning suppression